fixed some css lacks

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: -moz-linear-gradient(left, #fceabb 0%, #fccd4d 0%, #f8b500 100%, #fbdf93 100%);
+  background: -moz-linear-gradient(left, #fceabb 0%, #fccd4d 0%, #f8b500 100%, #fbdf93 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(left, #fceabb 0%,#fccd4d 0%,#f8b500 100%,#fbdf93 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to right, #fceabb 0%,#fccd4d 0%,#f8b500 100%,#fbdf93 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 }
 
 code {
